removed hash router and added repository name as routes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskproject",
-  "homepage": "http://anku1612.github.io/task",
+  "homepage": "http://anku1612.github.io/my-new-twitter-home-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
